option java_package = "de.uniluebeck.itm.metadaten.files";
option java_outer_classname = "MetaDataService";

message VOID {
	optional string OperationKey = 1;
}

message Identification {
	required string username = 1;
	required string password = 2;
}

message SearchRequest {
	optional Node query_ms = 1;
	optional string query_string = 2;
}

message SearchResponse {
	repeated MetaDataStream response = 1;
}

message Node {
	required int32 knotenid = 1;
	required string microcontroller = 2;
	required string description = 3;
	required string sensoren = 4;
	required string ip = 5;
}

message MetaDataStream {
	repeated Node  metadata = 1;
}

service Operations {
	rpc connect (Identification) returns (VOID);
	rpc add (Node) returns (VOID);
	rpc remove (Node) returns (VOID);
	rpc refresh (Node) returns (VOID);
	rpc search (SearchRequest) returns (SearchResponse);
}
